--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,8 +4,8 @@
     <style name="Theme.AppTheme" parent="android:Theme.Material" />
 
     <style name="Theme.Guillotine" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:colorPrimaryDark">@color/guillotine_background</item>
-        <item name="android:colorPrimary">@color/guillotine_background_dark</item>
+        <item name="android:colorPrimaryDark">#383547</item>
+        <item name="android:colorPrimary">#444153</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
